trunk/Archive2/86/f330466317ab88/output
main.cpp: In instantiation of ‘struct input_iter<int>’:
main.cpp:19:13:   required by substitution of ‘template<class InputIt, class> container<T>::container(InputIt, InputIt) [with InputIt = int; <template-parameter-1-2> = <missing>]’
main.cpp:29:19:   required from here
main.cpp:8:3: error: no type named ‘iterator_category’ in ‘struct std::iterator_traits<int>’
   and std::is_base_of
   ^
